create saghfinoo summery

--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@
     --color-warning-light: #f4b740;
     --color-warning-extralight: #fff8e1;
 
-    --color-tint-100: #fdf1f1;
+    --color-tint-100: #ffffffe3;
     --color-tint-200: #fce8e8;
     --color-tint-300: #f9d2d2;
     --color-tint-400: #f6bbbb;
