--- a/public/font.css
+++ b/public/font.css
@@ -1,29 +1,29 @@
 @font-face {
   font-family: "Shabnam";
   src: url("../fonts/Shabnam-Thin.woff2") format("woff2");
-  font-weight: 200;
+  font-weight: 100; /* Thin */
 }
 
 @font-face {
   font-family: "Shabnam";
   src: url("../fonts/Shabnam-Light.woff2") format("woff2");
-  font-weight: 300;
+  font-weight: 300; /* Light */
 }
 
 @font-face {
   font-family: "Shabnam";
-  src: url("../fonts/Shabnam.woff2") format("woff2");
-  font-weight: 400;
+  src: url("../fonts/Shabnam-Regular.woff2") format("woff2");
+  font-weight: 400; /* Regular */
 }
 
 @font-face {
   font-family: "Shabnam";
   src: url("../fonts/Shabnam-Medium.woff2") format("woff2");
-  font-weight: 500;
+  font-weight: 500; /* Medium */
 }
 
 @font-face {
   font-family: "Shabnam";
-  src: url("../fonts/Shabnam-Thin.woff2") format("woff2");
-  font-weight: 700;
+  src: url("../fonts/Shabnam-Bold.woff2") format("woff2");
+  font-weight: 700; /* Bold */
 }
