--- a/src/index.css
+++ b/src/index.css
@@ -184,3 +184,63 @@ table td {
 .active-icon {
   color: white;
 }
+
+/* map */
+
+.mapContainer {
+  flex: 1;
+  background-color: var(--text-100);
+  position: relative;
+}
+.mapContainer button.getLocation {
+  padding: 0.3rem 0.5rem;
+  font-size: 0.7rem;
+  font-weight: bold;
+  border-radius: 0.5rem;
+  position: absolute;
+  bottom: 1rem;
+  left: 1rem;
+  background-color: var(--primary-600);
+  box-shadow: 0 0 10px var(--primary-600);
+  color: #fff;
+  z-index: 1000;
+}
+.map {
+  height: 100%;
+}
+
+.searchList {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.searchList .searchItem {
+  display: flex;
+  gap: 1rem;
+}
+.searchList .searchItem img {
+  width: 6rem;
+  height: 6rem;
+  object-fit: cover;
+  border-radius: 1rem;
+}
+.searchItem .searchItemDesc p {
+  margin-bottom: 0.3rem;
+}
+.searchItem .searchItemDesc .name {
+  color: var(--text-400);
+}
+.searchItem .searchItemDesc .location {
+  font-weight: 500;
+}
+.searchItem .searchItemDesc .price {
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+}
+
+.searchItem .searchItemDesc .price span {
+  color: var(--text-400);
+  font-weight: 400;
+}
